--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@types/react-dom": "^17.0.14",
     "@types/styled-components": "^5.1.24",
     "gh-pages": "^3.2.3",
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.3",
+    "async": ">=2.6.4",
+    "nth-check": ">=2.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
